project setup + stubs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ ELSE()
 ENDIF()
 
 SET(PROJECT_BIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
+SET(PROJECT_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/source)
 
 PROJECT(MultipleSignalSlotsInjection)
 
@@ -14,24 +15,60 @@ PROJECT(MultipleSignalSlotsInjection)
 SET(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Core Widgets)
+FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Core)
 
 QT_STANDARD_PROJECT_SETUP()
-QT_ADD_EXECUTABLE(
-    MultipleSignalSlotsInjection
-    source/main.cpp
+
+QT_ADD_LIBRARY(
+    Global SHARED
+    source/Global/global.h
+    source/Global/Logger.h
+    source/Global/Logger.cpp
 )
 
-TARGET_LINK_LIBRARIES(MultipleSignalSlotsInjection PRIVATE Qt6::Core)
-TARGET_LINK_LIBRARIES(MultipleSignalSlotsInjection PRIVATE Qt6::Widgets)
+QT_ADD_LIBRARY(
+    LibA SHARED
+    source/LibA/Foo.h
+    source/LibA/Foo.cpp
+)
+
+QT_ADD_LIBRARY(
+    LibB SHARED
+    source/LibB/Bar.h
+    source/LibB/Bar.cpp
+)
+
+QT_ADD_EXECUTABLE(
+    Programm
+    source/Exe/Application.h
+    source/Exe/Application.cpp
+    source/Exe/main.cpp
+)
+
+TARGET_INCLUDE_DIRECTORIES(Global   INTERFACE ${PROJECT_SRC_PATH})
+TARGET_INCLUDE_DIRECTORIES(LibA     INTERFACE ${PROJECT_SRC_PATH})
+TARGET_INCLUDE_DIRECTORIES(LibB     INTERFACE ${PROJECT_SRC_PATH})
+TARGET_INCLUDE_DIRECTORIES(Programm INTERFACE ${PROJECT_SRC_PATH})
+
+TARGET_LINK_LIBRARIES(Global   PRIVATE                  Qt6::Core)
+TARGET_LINK_LIBRARIES(LibA     PRIVATE Global           Qt6::Core)
+TARGET_LINK_LIBRARIES(LibB     PRIVATE Global LibA      Qt6::Core)
+TARGET_LINK_LIBRARIES(Programm PRIVATE Global      LibB Qt6::Core)
 
 IF(MSVC)
-    SET_TARGET_PROPERTIES(MultipleSignalSlotsInjection PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
-    SET_TARGET_PROPERTIES(MultipleSignalSlotsInjection PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
+    SET_TARGET_PROPERTIES(Global   PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
+    SET_TARGET_PROPERTIES(LibA     PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
+    SET_TARGET_PROPERTIES(LibB     PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
+    SET_TARGET_PROPERTIES(Programm PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
+    
+    SET_TARGET_PROPERTIES(Global   PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
+    SET_TARGET_PROPERTIES(LibA     PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
+    SET_TARGET_PROPERTIES(LibB     PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
+    SET_TARGET_PROPERTIES(Programm PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
 ENDIF(MSVC)
 
 ADD_CUSTOM_COMMAND(
-    TARGET MultipleSignalSlotsInjection
+    TARGET Programm
     POST_BUILD
-    COMMAND CD $<$<CONFIG:Debug>:${PROJECT_BIN_PATH}/Debug>$<$<CONFIG:Release>:${PROJECT_BIN_PATH}/Release> && ${WINDEPLOYQT_EXECUTABLE} MultipleSignalSlotsInjection.exe --verbose 1 --dir . --plugindir plugins --no-translations --compiler-runtime
+    COMMAND CD $<$<CONFIG:Debug>:${PROJECT_BIN_PATH}/Debug>$<$<CONFIG:Release>:${PROJECT_BIN_PATH}/Release> && ${WINDEPLOYQT_EXECUTABLE} Programm.exe --verbose 1 --dir . --plugindir plugins --no-translations --compiler-runtime
     )
