make Global interface only, remove dummy logger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,8 @@ FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Core)
 QT_STANDARD_PROJECT_SETUP()
 
 QT_ADD_LIBRARY(
-    Global SHARED
+    Global INTERFACE
     source/Global/global.h
-    source/Global/Logger.h
-    source/Global/Logger.cpp
 )
 
 QT_ADD_LIBRARY(
@@ -45,23 +43,19 @@ QT_ADD_EXECUTABLE(
     source/Exe/main.cpp
 )
 
-TARGET_INCLUDE_DIRECTORIES(Global   INTERFACE ${PROJECT_SRC_PATH})
-TARGET_INCLUDE_DIRECTORIES(LibA     INTERFACE ${PROJECT_SRC_PATH})
-TARGET_INCLUDE_DIRECTORIES(LibB     INTERFACE ${PROJECT_SRC_PATH})
-TARGET_INCLUDE_DIRECTORIES(Programm INTERFACE ${PROJECT_SRC_PATH})
+TARGET_INCLUDE_DIRECTORIES(LibA     PUBLIC ${PROJECT_SRC_PATH})
+TARGET_INCLUDE_DIRECTORIES(LibB     PUBLIC ${PROJECT_SRC_PATH})
+TARGET_INCLUDE_DIRECTORIES(Programm PUBLIC ${PROJECT_SRC_PATH})
 
-TARGET_LINK_LIBRARIES(Global   PRIVATE                  Qt6::Core)
-TARGET_LINK_LIBRARIES(LibA     PRIVATE Global           Qt6::Core)
-TARGET_LINK_LIBRARIES(LibB     PRIVATE Global LibA      Qt6::Core)
-TARGET_LINK_LIBRARIES(Programm PRIVATE Global      LibB Qt6::Core)
+TARGET_LINK_LIBRARIES(LibA     PRIVATE      Qt6::Core)
+TARGET_LINK_LIBRARIES(LibB     PRIVATE LibA Qt6::Core)
+TARGET_LINK_LIBRARIES(Programm PRIVATE LibB Qt6::Core)
 
 IF(MSVC)
-    SET_TARGET_PROPERTIES(Global   PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
     SET_TARGET_PROPERTIES(LibA     PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
     SET_TARGET_PROPERTIES(LibB     PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
     SET_TARGET_PROPERTIES(Programm PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
     
-    SET_TARGET_PROPERTIES(Global   PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
     SET_TARGET_PROPERTIES(LibA     PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
     SET_TARGET_PROPERTIES(LibB     PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
     SET_TARGET_PROPERTIES(Programm PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
@@ -72,3 +66,5 @@ ADD_CUSTOM_COMMAND(
     POST_BUILD
     COMMAND CD $<$<CONFIG:Debug>:${PROJECT_BIN_PATH}/Debug>$<$<CONFIG:Release>:${PROJECT_BIN_PATH}/Release> && ${WINDEPLOYQT_EXECUTABLE} Programm.exe --verbose 1 --dir . --plugindir plugins --no-translations --compiler-runtime
     )
+
+QT_FINALIZE_PROJECT()
