use target defines set D_EXPORT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,9 @@ TARGET_LINK_LIBRARIES(LibA     PRIVATE           Qt6::Core)
 TARGET_LINK_LIBRARIES(LibB     PRIVATE LibA      Qt6::Core)
 TARGET_LINK_LIBRARIES(Programm PRIVATE LibA LibB Qt6::Core)
 
+TARGET_COMPILE_DEFINITIONS(LibA   PRIVATE D_EXPORT)
+TARGET_COMPILE_DEFINITIONS(LibB   PRIVATE D_EXPORT)
+
 IF(MSVC)
     SET_TARGET_PROPERTIES(LibA     PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
     SET_TARGET_PROPERTIES(LibB     PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
